Add claims and views HTTP endpoints
(cherry picked from commit 7b00469a3499d16d0f7e5083284008fa87ea910b)
